# demo-native-kmp

./: .gitignore  build.gradle.kts  settings.gradle.kts  wasm.properties
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: CMakeBuildTask.kt  CMakeConfigureTask.kt  CMakeOptions.kt  CMakePlugin.kt  HasPlatformPlugin.kt  MaybeAndroidLibraryPlugin.kt  RootProperties.kt  RootPropertiesPlugin.kt
cpp_jni/: CMakeLists.txt  build.gradle.kts
cpp_jni/src/: base64_jni.cpp
cpp_native/: CMakeLists.txt  build.gradle.kts  index.html
cpp_native/src/: base64.cpp  base64.h  base64_c.cpp  base64_c.h  demo.cpp
native-base64/: build.gradle.kts
native-base64-cpp/: build.gradle.kts
native-base64-cpp/karma.config.d/: wasm.config.js
native-base64-cpp/src/allNativeMain/kotlin/org/example/nativeb64/cpp/: NativeBase64Native.kt
native-base64-cpp/src/androidMain/: AndroidManifest.xml
native-base64-cpp/src/androidMain/kotlin/org/example/nativeb64/cpp/: NativeBase64Jvm.kt
native-base64-cpp/src/commonMain/kotlin/org/example/nativeb64/cpp/: NativeBase64.kt
native-base64-cpp/src/commonTest/kotlin/org/example/nativeb64/cpp/: B64Tests.kt
native-base64-cpp/src/jsMain/kotlin/org/example/nativeb64/cpp/: NativeBase64Js.kt  cpp_base64_js.kt
native-base64-cpp/src/jsTest/kotlin/org/example/nativeb64/cpp/: B64TestsJs.kt  JsTests.kt
native-base64-cpp/src/jvmMain/kotlin/org/example/nativeb64/cpp/: NativeBase64Jvm.kt
native-base64-cpp/src/jvmTest/kotlin/org/example/nativeb64/cpp/: B64TestsJvm.kt
native-base64-cpp/src/nativeInterop/cinterop/: cpp_base64.def
native-base64-cpp/webpack.config.d/: wasm.config.js
native-base64/src/commonMain/kotlin/org/example/nativeb64/: NativeBase64.kt
